# pacman-ai-pipeline

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  requirements.txt
config/: paths.json
model/: DeepQl_model.py  feature_engineer.py  ml_worker.py  model.ipynb  pacman_env.py  replay_buffer.py  rl_agent.py
scripts/: data_cleaner.py  dataset.py  parquet_converter.py  path_configurator.py  relational_scheme.ipynb
src/: Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  EntityType.h  EventLogger.cpp  EventLogger.h  EventLogger_unix.cpp  EventLogger_unix.h  EventLogger_win.cpp  EventLogger_win.h  Game.cpp  Game.h  LogData.h  Pellet.cpp  Pellet.h  Player.cpp  Player.h  main.cpp  tool.cpp  tool.h
